# cpp-pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: release-drafter.yml  release.yml
.github/workflows/: build.yml  release-notes.yml  release.yml
tests/: main_test.cpp
